# surgeist-style

./: AGENTS.md  Cargo.toml  README.md
api/: public-api.txt
plans/: 2026-06-06-surgeist-style-audit-fixes.md  2026-06-06-surgeist-style-implementation.md  2026-06-21-surgeist-style-typed-calc-integration.md  2026-06-27-surgeist-style-layout-adapter-modeling-fixes.md  2026-06-27-surgeist-style-layout-integration-readiness.md  2026-06-27-surgeist-style-type-safety-domain-inventory.md  2026-06-27-surgeist-style-type-safety-modeling-plan.md  2026-07-05-authored-cascade-keywords-implementation.md  2026-07-05-css-property-coverage-ledger-implementation.md  2026-07-05-css-property-coverage-ledger.md  2026-07-05-css-surface-inventory-ledger-implementation.md  2026-07-05-css-surface-style-ledger.md  2026-07-05-css-surface-style-operations-sequence.md  2026-07-05-css-surface-style-support-directive.md  2026-07-05-custom-properties-variable-substitution-implementation.md  2026-07-05-layout-facing-property-families-implementation.md  2026-07-05-paint-color-effects-property-families-implementation.md  2026-07-05-pseudo-element-style-buckets-implementation.md  2026-07-05-selector-tree-matching-expansion-implementation.md  2026-07-05-text-facing-property-families-implementation.md  2026-07-06-conditions-layers-scope-implementation.md  2026-07-06-generated-content-counters-lists-implementation.md  2026-07-06-timing-animation-keyframes-implementation.md  2026-07-07-api-artifacts-compile-fail-root-handoff-implementation.md  2026-07-07-style-css-api-artifact.md  crate-review-2026-07-12.md  (+2 more)
(+151 files in other folders)
